--- a/site/index.html
+++ b/site/index.html
@@ -69,8 +69,8 @@
             <nav class="collapse navbar-collapse bs-navbar-collapse pull-right" role="navigation">
                 <ul class="nav navbar-nav">
                     <li><a href="https://kdongnote.tistory.com/">Tistory</a></li>
-                    <!-- <li><a href="https://codepen.io/webstoryboy">Codepen</a></li> -->
-                    <li><a href="https://github.com/webstoryboy/dothome1">Github</a></li>
+                    <li><a href="https://codepen.io/kdong1224">Codepen</a></li>
+                    <li><a href="https://kdong1224.github.io/dothome21/">Github</a></li>
                     <!-- <li><a href="https://www.figma.com/@874463">Figma</a></li> -->
                 </ul>
             </nav>
@@ -78,19 +78,69 @@
     </header>
     <div class="bs-header bgs1" id="content">
         <div class="container">
-            <h1>Wireframe Reference v1.0 &lt;/doc&gt;</h1>
+            <h1>Site Reference v1.0 &lt;/doc&gt;</h1>
             <p><a href="https://kdong1224.github.io/dothome21/" target="_blank">kdong1224.github.io</a></p>
         </div>
     </div>
     <div class="container bs-docs-container">
         <div class="row">
             <div class="col-md-9" role="main">
+                
                 <!-- Intro1 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro1" class="page-header">카드 유형1</h2>
-                    <p>코드 보기 <a href="cardType01.html">View</a></p>
+                    <h2 id="intro1" class="page-header">Card 유형</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/cardType-index.png" alt="Card 유형">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="cardType.html">View</a></p>
                 </div>
                 <!-- //Intro1 -->
+
+                <!-- Intro2 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro2" class="page-header">Image 유형</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/imageType-index.png" alt="Image 유형">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="imgType.html">View</a></p>
+                </div>
+                <!-- //Intro2 -->
+
+                <!-- Intro3 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro3" class="page-header">hoverEffect 유형</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/hoverEffectType-index.png" alt="hoverEffect 유형">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="hoverEffectType.html">View</a></p>
+                </div>
+                <!-- //Intro3 -->
+
+                <!-- Intro4 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro4" class="page-header">Slider 유형</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/SliderType-index.png" alt="Slider 유형">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="sliderType.html">View</a></p>
+                </div>
+                <!-- //Intro4 -->
 
             </div>
             <!-- //col-md-9 -->
@@ -99,7 +149,10 @@
             <div class="col-md-3">
                 <div class="bs-sidebar hidden-print" role="complementary">
                     <ul class="nav bs-sidenav">
-                        <li><a href="#intro1">카드 유형1</a></li>
+                        <li><a href="#intro1">Card 유형</a></li>
+                        <li><a href="#intro2">Image 유형</a></li>
+                        <li><a href="#intro3">hoverEffect 유형</a></li>
+                        <li><a href="#intro4">Slider 유형</a></li>
                     </ul>
                 </div>
             </div>
