--- a/refer-javascript/javascriptRefer09.html
+++ b/refer-javascript/javascriptRefer09.html
@@ -18,13 +18,13 @@
 
     <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
-    <ul class="page">
+    <!-- <ul class="page">
         <li><a href="../index.html">MAIN</a></li>
         <li><a href="../refer-html/index.html">HTML</a></li>
         <li><a href="../refer-css/index.html">CSS</a></li>
         <li><a href="../refer-javascript/index.html">JAVASCRIPT</a></li>
         <li><a href="../refer-jquery/index.html">JQUERY</a></li>
-    </ul>
+    </ul> -->
 
     <nav class="menu">
         <ul>
