--- a/refer-javascript/javascriptRefer11.html
+++ b/refer-javascript/javascriptRefer11.html
@@ -103,9 +103,6 @@
             .ex3 > div {
                 width: 31%;
             }
-            .example {
-                padding: 10px;
-            }
         }
 
         /* ex4 */
@@ -135,13 +132,13 @@
 
     <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
-    <ul class="page">
+    <!-- <ul class="page">
         <li><a href="../index.html">MAIN</a></li>
         <li><a href="../refer-html/index.html">HTML</a></li>
         <li><a href="../refer-css/index.html">CSS</a></li>
         <li><a href="../refer-javascript/index.html">JAVASCRIPT</a></li>
         <li><a href="../refer-jquery/index.html">JQUERY</a></li>
-    </ul>
+    </ul> -->
 
     <nav class="menu">
         <ul>
