--- a/refer-jquery/jqueryRefer04.html
+++ b/refer-jquery/jqueryRefer04.html
@@ -17,13 +17,13 @@
                 <h1><a href="index.html">조작 메서드</a></h1>
             </div>
 
-            <ul class="page">
+            <!-- <ul class="page">
                 <li><a href="../index.html">MAIN</a></li>
                 <li><a href="../refer-html/index.html">HTML</a></li>
                 <li><a href="../refer-css/index.html">CSS</a></li>
                 <li><a href="../refer-javascript/index.html">JAVASCRIPT</a></li>
                 <li><a href="../refer-jquery/index.html">JQUERY</a></li>
-            </ul>
+            </ul> -->
 
             <nav class="menu">
                 <ul>
