--- a/refer-javascript/javascriptRefer04.html
+++ b/refer-javascript/javascriptRefer04.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-
+<body id="wrap">
+    <div id="contents">
     <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
     <!-- <ul class="page">
@@ -687,15 +687,15 @@
             // document.write("<br>");
 
                 document.querySelector("#sample07 .text").innerHTML = `1. 반복문이 실행되었습니다. <br>
-                                                                       2. 반복문이 실행되었습니다. <br>
-                                                                       3. 반복문이 실행되었습니다. <br>
-                                                                       4. 반복문이 실행되었습니다. <br>
-                                                                       5. 반복문이 실행되었습니다. <br>
-                                                                       6. 반복문이 실행되었습니다. <br>
-                                                                       7. 반복문이 실행되었습니다. <br>
-                                                                       8. 반복문이 실행되었습니다. <br>
-                                                                       9. 반복문이 실행되었습니다. <br>
-                                                                       10. 반복문이 실행되었습니다.`;
+                                                                        2. 반복문이 실행되었습니다. <br>
+                                                                        3. 반복문이 실행되었습니다. <br>
+                                                                        4. 반복문이 실행되었습니다. <br>
+                                                                        5. 반복문이 실행되었습니다. <br>
+                                                                        6. 반복문이 실행되었습니다. <br>
+                                                                        7. 반복문이 실행되었습니다. <br>
+                                                                        8. 반복문이 실행되었습니다. <br>
+                                                                        9. 반복문이 실행되었습니다. <br>
+                                                                        10. 반복문이 실행되었습니다.`;
                 document.querySelector("#sample07 .result-box h3").addEventListener("click", function(){
                     document.querySelector("#sample07 .result-box h3").classList.toggle("active");
                     document.querySelector("#sample07 .result-box div").classList.toggle("active");
@@ -716,15 +716,15 @@
             // document.write("<br>");
 
                 document.querySelector("#sample08 .text").innerHTML = `1. 반복문이 실행되었습니다. <br>
-                                                                       2. 반복문이 실행되었습니다. <br>
-                                                                       3. 반복문이 실행되었습니다. <br>
-                                                                       4. 반복문이 실행되었습니다. <br>
-                                                                       5. 반복문이 실행되었습니다. <br>
-                                                                       6. 반복문이 실행되었습니다. <br>
-                                                                       7. 반복문이 실행되었습니다. <br>
-                                                                       8. 반복문이 실행되었습니다. <br>
-                                                                       9. 반복문이 실행되었습니다. <br>
-                                                                       10. 반복문이 실행되었습니다.`;
+                                                                        2. 반복문이 실행되었습니다. <br>
+                                                                        3. 반복문이 실행되었습니다. <br>
+                                                                        4. 반복문이 실행되었습니다. <br>
+                                                                        5. 반복문이 실행되었습니다. <br>
+                                                                        6. 반복문이 실행되었습니다. <br>
+                                                                        7. 반복문이 실행되었습니다. <br>
+                                                                        8. 반복문이 실행되었습니다. <br>
+                                                                        9. 반복문이 실행되었습니다. <br>
+                                                                        10. 반복문이 실행되었습니다.`;
                 document.querySelector("#sample08 .result-box h3").addEventListener("click", function(){
                     document.querySelector("#sample08 .result-box h3").classList.toggle("active");
                     document.querySelector("#sample08 .result-box div").classList.toggle("active");
@@ -747,15 +747,15 @@
             // document.write("<br>");
 
             document.querySelector("#sample09 .text").innerHTML = `1. 반복문이 실행되었습니다. <br>
-                                                                   2. 반복문이 실행되었습니다. <br>
-                                                                   3. 반복문이 실행되었습니다. <br>
-                                                                   4. 반복문이 실행되었습니다. <br>
-                                                                   5. 반복문이 실행되었습니다. <br>
-                                                                   6. 반복문이 실행되었습니다. <br>
-                                                                   7. 반복문이 실행되었습니다. <br>
-                                                                   8. 반복문이 실행되었습니다. <br>
-                                                                   9. 반복문이 실행되었습니다. <br>
-                                                                   10. 반복문이 실행되었습니다.`;
+                                                                    2. 반복문이 실행되었습니다. <br>
+                                                                    3. 반복문이 실행되었습니다. <br>
+                                                                    4. 반복문이 실행되었습니다. <br>
+                                                                    5. 반복문이 실행되었습니다. <br>
+                                                                    6. 반복문이 실행되었습니다. <br>
+                                                                    7. 반복문이 실행되었습니다. <br>
+                                                                    8. 반복문이 실행되었습니다. <br>
+                                                                    9. 반복문이 실행되었습니다. <br>
+                                                                    10. 반복문이 실행되었습니다.`;
             document.querySelector("#sample09 .result-box h3").addEventListener("click", function(){
                 document.querySelector("#sample09 .result-box h3").classList.toggle("active");
                 document.querySelector("#sample09 .result-box div").classList.toggle("active");
@@ -777,35 +777,35 @@
             // document.write("<br><br>");
 
             document.querySelector("#sample10 .text").innerHTML = `1. 반복문(아이)이 실행되었습니다. <br>
-                                                                   1. 반복문(제이)이 실행되었습니다. <br>
-                                                                   2. 반복문(제이)이 실행되었습니다. <br>
-                                                                   3. 반복문(제이)이 실행되었습니다. <br>
-                                                                   4. 반복문(제이)이 실행되었습니다. <br>
-                                                                   5. 반복문(제이)이 실행되었습니다. <br>
-                                                                   2. 반복문(아이)이 실행되었습니다. <br>
-                                                                   1. 반복문(제이)이 실행되었습니다. <br>
-                                                                   2. 반복문(제이)이 실행되었습니다. <br>
-                                                                   3. 반복문(제이)이 실행되었습니다. <br>
-                                                                   4. 반복문(제이)이 실행되었습니다. <br>
-                                                                   5. 반복문(제이)이 실행되었습니다. <br>
-                                                                   3. 반복문(아이)이 실행되었습니다. <br>
-                                                                   1. 반복문(제이)이 실행되었습니다. <br>
-                                                                   2. 반복문(제이)이 실행되었습니다. <br>
-                                                                   3. 반복문(제이)이 실행되었습니다. <br>
-                                                                   4. 반복문(제이)이 실행되었습니다. <br>
-                                                                   5. 반복문(제이)이 실행되었습니다. <br>
-                                                                   4. 반복문(아이)이 실행되었습니다. <br>
-                                                                   1. 반복문(제이)이 실행되었습니다. <br>
-                                                                   2. 반복문(제이)이 실행되었습니다. <br>
-                                                                   3. 반복문(제이)이 실행되었습니다. <br>
-                                                                   4. 반복문(제이)이 실행되었습니다. <br>
-                                                                   5. 반복문(제이)이 실행되었습니다. <br>
-                                                                   5. 반복문(아이)이 실행되었습니다. <br>
-                                                                   1. 반복문(제이)이 실행되었습니다. <br>
-                                                                   2. 반복문(제이)이 실행되었습니다. <br>
-                                                                   3. 반복문(제이)이 실행되었습니다. <br>
-                                                                   4. 반복문(제이)이 실행되었습니다. <br>
-                                                                   5. 반복문(제이)이 실행되었습니다.`;
+                                                                    1. 반복문(제이)이 실행되었습니다. <br>
+                                                                    2. 반복문(제이)이 실행되었습니다. <br>
+                                                                    3. 반복문(제이)이 실행되었습니다. <br>
+                                                                    4. 반복문(제이)이 실행되었습니다. <br>
+                                                                    5. 반복문(제이)이 실행되었습니다. <br>
+                                                                    2. 반복문(아이)이 실행되었습니다. <br>
+                                                                    1. 반복문(제이)이 실행되었습니다. <br>
+                                                                    2. 반복문(제이)이 실행되었습니다. <br>
+                                                                    3. 반복문(제이)이 실행되었습니다. <br>
+                                                                    4. 반복문(제이)이 실행되었습니다. <br>
+                                                                    5. 반복문(제이)이 실행되었습니다. <br>
+                                                                    3. 반복문(아이)이 실행되었습니다. <br>
+                                                                    1. 반복문(제이)이 실행되었습니다. <br>
+                                                                    2. 반복문(제이)이 실행되었습니다. <br>
+                                                                    3. 반복문(제이)이 실행되었습니다. <br>
+                                                                    4. 반복문(제이)이 실행되었습니다. <br>
+                                                                    5. 반복문(제이)이 실행되었습니다. <br>
+                                                                    4. 반복문(아이)이 실행되었습니다. <br>
+                                                                    1. 반복문(제이)이 실행되었습니다. <br>
+                                                                    2. 반복문(제이)이 실행되었습니다. <br>
+                                                                    3. 반복문(제이)이 실행되었습니다. <br>
+                                                                    4. 반복문(제이)이 실행되었습니다. <br>
+                                                                    5. 반복문(제이)이 실행되었습니다. <br>
+                                                                    5. 반복문(아이)이 실행되었습니다. <br>
+                                                                    1. 반복문(제이)이 실행되었습니다. <br>
+                                                                    2. 반복문(제이)이 실행되었습니다. <br>
+                                                                    3. 반복문(제이)이 실행되었습니다. <br>
+                                                                    4. 반복문(제이)이 실행되었습니다. <br>
+                                                                    5. 반복문(제이)이 실행되었습니다.`;
             document.querySelector("#sample10 .result-box h3").addEventListener("click", function(){
                 document.querySelector("#sample10 .result-box h3").classList.toggle("active");
                 document.querySelector("#sample10 .result-box div").classList.toggle("active");
@@ -883,10 +883,10 @@
             // document.write("<br>");
 
             document.querySelector("#sample12 .text").innerHTML = `100. 반복문이 실행되었습니다.<br>
-                                                                   200. 반복문이 실행되었습니다.<br>
-                                                                   300. 반복문이 실행되었습니다.<br>
-                                                                   400. 반복문이 실행되었습니다.<br>
-                                                                   500. 반복문이 실행되었습니다.`;
+                                                                    200. 반복문이 실행되었습니다.<br>
+                                                                    300. 반복문이 실행되었습니다.<br>
+                                                                    400. 반복문이 실행되었습니다.<br>
+                                                                    500. 반복문이 실행되었습니다.`;
             document.querySelector("#sample12 .result-box h3").addEventListener("click", function(){
                 document.querySelector("#sample12 .result-box h3").classList.toggle("active");
                 document.querySelector("#sample12 .result-box div").classList.toggle("active");
@@ -1000,6 +1000,8 @@
         }
         
     </script>
+    </div>
+    
 
 </body>
 
