--- a/refer-javascript/javascriptRefer05.html
+++ b/refer-javascript/javascriptRefer05.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-
+<body id="wrap">
+    <div id="contents">
     <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
     <!-- <ul class="page">
@@ -1430,6 +1430,8 @@
             document.querySelector(".sample11_R4").innerHTML = url4;
         }
     </script>
+    </div>
+    
 
 </body>
 
