--- a/refer-javascript/javascriptRefer11.html
+++ b/refer-javascript/javascriptRefer11.html
@@ -128,9 +128,9 @@
     </style>
 </head>
 
-<body>
-
-    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
+<body id="wrap">
+    <div id="contents">
+        <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
     <!-- <ul class="page">
         <li><a href="../index.html">MAIN</a></li>
@@ -513,6 +513,8 @@
         //sample01
         //01. 
     </script>
+    </div>
+    
 
 </body>
 
