--- a/refer-javascript/javascriptRefer06.html
+++ b/refer-javascript/javascriptRefer06.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-
-    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
+<body id="wrap">
+    <div id="contents">
+        <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
     <!-- <ul class="page">
         <li><a href="../index.html">MAIN</a></li>
@@ -1602,6 +1602,8 @@
             document.querySelector(".sample14_R3").innerHTML = result3;
         }
     </script>
+    </div>
+    
 
 </body>
 
