--- a/refer-javascript/javascriptRefer07.html
+++ b/refer-javascript/javascriptRefer07.html
@@ -15,9 +15,9 @@
     
 </head>
 
-<body class="body">
-
-    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
+<body id="wrap" class="body">
+    <div id="contents">
+        <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
     <!-- <ul class="page">
         <li><a href="../index.html">MAIN</a></li>
@@ -446,6 +446,8 @@
             document.querySelector(".sample03_R3").innerHTML = date3;
         }
     </script>
+    </div>
+    
 
 </body>
 
