--- a/refer-javascript/javascriptRefer09.html
+++ b/refer-javascript/javascriptRefer09.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-
-    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
+<body id="wrap">
+    <div id="contents">
+        <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
     <!-- <ul class="page">
         <li><a href="../index.html">MAIN</a></li>
@@ -367,6 +367,8 @@
         }
 
     </script>
+    </div>
+    
 
 </body>
 
