--- a/refer-javascript/javascriptRefer10.html
+++ b/refer-javascript/javascriptRefer10.html
@@ -14,16 +14,19 @@
     <link rel="stylesheet" href="style.css">
     <style>
         @media(max-width: 500px){
-            #sample04 .btn {
-                font-size: 12px;
+            #sample04 .btn a {
+                font-size: 9px;
+            }
+            #sample04 .ex4 p {
+                font-size: 10px;
             }
         }
     </style>
 </head>
 
-<body>
-
-    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
+<body id="wrap">
+    <div id="contents">
+        <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
     <!-- <ul class="page">
         <li><a href="../index.html">MAIN</a></li>
@@ -367,6 +370,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.0/prism.min.js"></script>
+    </div>
+    
 </body>
 
 </html>
