--- a/refer-javascript/javascriptRefer12.html
+++ b/refer-javascript/javascriptRefer12.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-
-    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
+<body id="wrap">
+    <div id="contents">
+        <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
     <!-- <ul class="page">
         <li><a href="../index.html">MAIN</a></li>
@@ -118,6 +118,8 @@
         //     document.querySelector(".sample01_R1").innerHTML = "지금은 " + year + "년 입니다.";
         // }
     </script>
+    </div>
+    
 
 </body>
 
