--- a/refer-javascript/javascriptRefer13.html
+++ b/refer-javascript/javascriptRefer13.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-
-    <h1><a href="index.html">Javascript 레퍼런스</a></h1>
+<body id="wrap">
+    <div id="contents">
+        <h1><a href="index.html">Javascript 레퍼런스</a></h1>
 
     <!-- <ul class="page">
         <li><a href="../index.html">MAIN</a></li>
@@ -77,7 +77,7 @@
     <hr>
     
     <!-- sample01 -->
-    <div id="sample01" class="sample">
+    <!-- <div id="sample01" class="sample">
         <h2> 01.  <span class="dot"></span></h2>
         <div class="view">
             <table>
@@ -115,7 +115,7 @@
 }
 </code></pre>
         </div>
-    </div>
+    </div> -->
     <!-- sample01 -->
 
     <hr>
@@ -136,6 +136,8 @@
         //     document.querySelector(".sample01_R1").innerHTML = "지금은 " + year + "년 입니다.";
         // }
     </script>
+    </div>
+    
 
 </body>
 
