--- a/refer-javascript/javascriptRefer11.html
+++ b/refer-javascript/javascriptRefer11.html
@@ -87,21 +87,30 @@
         @media (max-width: 800px){
             .ex1 {
                 flex-wrap: wrap;
+                justify-content: space-around;
             }
             .ex1 > div {
-                width: 31%;
+                width: 45%;
+                margin: 1%;
             }
             .ex2 {
                 flex-wrap: wrap;
             }
             .ex2 > div {
-                width: 31%;
+                width: 45%;
+                margin: 1%;
             }
             .ex3 {
                 flex-wrap: wrap;
             }
             .ex3 > div {
-                width: 31%;
+                width: 45%;
+                margin: 1%;
+            }
+            .btn a {
+                font-size: 11px;
+                display: block;
+                text-align: center;
             }
         }
 
