--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -24,8 +24,8 @@
             width: 18%;
         }
         .ex1 > div.active {
-            border: 4px dashed #a51a3d;
-            background-color: #a51a3d;
+            border: 4px dashed #0400f8;
+            background-color: #0400f8;
             border-radius: 5px;
         }
         .ex1 > div.active img {
@@ -48,8 +48,8 @@
             width: 18%;
         }
         .ex2 > div.active {
-            border: 4px dashed #a51a3d;
-            background-color: #a51a3d;
+            border: 4px dashed #0400f8;
+            background-color: #0400f8;
             border-radius: 5px;
         }
         .ex2 > div.active img {
@@ -72,8 +72,8 @@
             width: 18%;
         }
         .ex3 > div.active {
-            border: 4px dashed #a51a3d;
-            background-color: #a51a3d;
+            border: 4px dashed #0400f8;
+            background-color: #0400f8;
             border-radius: 5px;
         }
         .ex3 > div.active img {
@@ -92,24 +92,24 @@
         @media (max-width: 800px){
             .ex1 {
                 flex-wrap: wrap;
+                justify-content: space-around;
             }
             .ex1 > div {
-                width: 31%;
+                width: 48%;
                 margin: 1%;
             }
             .ex2 {
                 flex-wrap: wrap;
             }
             .ex2 > div {
-                width: 31%;
+                width: 48%;
                 margin: 1%;
-
             }
             .ex3 {
                 flex-wrap: wrap;
             }
             .ex3 > div {
-                width: 31%;
+                width: 48%;
                 margin: 1%;
             }
         }
