--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -56,7 +56,7 @@
             padding: 15% 5% 5%;
         }
         main h2 em {
-            color: #00db72;
+            color: #ff9800;
             font-style: normal;
         }
         #contents {
@@ -74,7 +74,7 @@
             padding: 6px 30px;
             background-color: #fff;
             margin-bottom: 40px;
-            background-color: #00db72;
+            background-color: #ff9800;
             color: #fff;
         }
         .refer h3 a {
@@ -82,13 +82,12 @@
             color: #fff;
         }
         .refer h3.active {
-            box-shadow: inset 0 -5px 0 0 rgb(217, 255, 0);
+            box-shadow: inset 0 -5px 0 0 #0e43f1;
         }
         .refer table {
             width: 100%;
             border: 1px solid #aaa;
             border-collapse: collapse;
-            box-sizing: border-box;
         }
         .refer table th {
             border: 1px solid #aaa;
@@ -104,7 +103,7 @@
             transition: all 0.3s;
         }
         .refer table tr:hover{
-            background-color: #00db72;
+            background-color: #ffcc80;
             color: #fff;
             cursor: crosshair;
         }
@@ -120,7 +119,7 @@
             margin-bottom: 10px;
         }
         .link li a:hover {
-            background:#00db72;
+            background:#ffcc80;
         }
         .page {
             text-align: right;
